<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/opertor_icon"
        android:title=""
        android:icon="@drawable/ic_mail_outline_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_reser"
        android:icon="@drawable/ic_cached_white_24dp"
        android:title="@string/action_reset"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/licence"
        android:title="@string/licence"
        app:showAsAction="never" />




</menu>